--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-plotly
-nltk
-gensim
-tqdm
-googletrans==4.0.0rc1
-transformers
-pdfplumber
-deep-translator
-requests
-streamlit-autorefresh
-torch
-scipy==1.10.1
-
+streamlit==1.35.0
+pandas==2.2.2
+numpy==1.24.4
+matplotlib==3.7.1
+seaborn==0.12.2
+plotly==5.15.0
+nltk==3.8.1
+gensim==4.3.2
+tqdm==4.66.1
+transformers==4.38.2
+torch==2.1.2
+pdfplumber==0.10.3
+deep-translator==1.11.4
+requests==2.31.0
+streamlit-autorefresh==0.0.2
+googletrans==3.1.0a0
