--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ nltk==3.8.1
 gensim==4.3.2
 tqdm==4.66.1
 transformers==4.38.2
-torch==2.1.2
+#torch==2.1.2
 pdfplumber==0.10.3
 deep-translator==1.11.4
 requests==2.31.0
