--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 streamlit==1.35.0
 pandas==2.2.2
+torch>=2.1,<2.2; python_version<'3.12'
+# or remove torch temporarily if not essential
+streamlit-autorefresh  # <- Remove version pinning
+torch==2.1.2+cpu  # This may work on Python <= 3.11 with a proper index URL
+
+pandas==2.2.2
 matplotlib==3.7.1
 seaborn==0.12.2
 plotly==5.15.0
@@ -11,5 +17,5 @@ transformers==4.38.2
 pdfplumber==0.10.3
 deep-translator==1.11.4
 requests==2.31.0
-streamlit-autorefresh==0.0.2
+#streamlit-autorefresh==0.0.2
 googletrans==3.1.0a0
