--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 streamlit==1.35.0
 pandas==2.2.2
-torch>=2.1,<2.2; python_version<'3.12'
 # or remove torch temporarily if not essential
 streamlit-autorefresh  # <- Remove version pinning
-torch==2.1.2+cpu  # This may work on Python <= 3.11 with a proper index URL
+torch==2.1.2
 
 pandas==2.2.2
 matplotlib==3.7.1
